update file pom to run mvn test command